# zksync-withdrawal-finalizer

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose-runner.yml  finalizer.md  hardhat.config.ts  package.json  test_tx.txt  testnet.toml
.github/: dependabot.yml  pull_request_template.md  release-please.yml
.github/release-please/: config.json  manifest.json
.github/spellcheck/: finalizer.cfg  finalizer.dic
.github/workflows/: build_and_publish.yml  cargo-deny.yml  check-pr-title.yml  check-spelling.yml  ci.yml  migration_deployment.yml  release-please.yml  secrets_scanner.yaml
api/: Cargo.toml
api/src/: lib.rs
chain-events/: Cargo.toml
chain-events/src/: block_events.rs  error.rs  l2_events.rs  l2_to_l1_events.rs  lib.rs  metrics.rs  withdrawal_events.rs
client/: Cargo.toml
client/src/: contracts_deployer.rs  error.rs  etherscan.rs  ethtoken.rs  l1bridge.rs  l1messenger.rs  l2bridge.rs  l2standard_token.rs  lib.rs  metrics.rs  withdrawal_finalizer.rs  zksync_contract.rs  zksync_types.rs
client/src/contracts/: IL2StandardToken.json  IZkSync.json  WithdrawalFinalizer.json
client/tests/: request_blocks_by_timestamp.rs
contracts/: WithdrawalFinalizer.sol
doc/: finalization.md
ethers-log-decode/: Cargo.toml
ethers-log-decode/src/: lib.rs
finalizer/: CHANGELOG.md  Cargo.toml
finalizer/src/: accumulator.rs  error.rs  lib.rs  metrics.rs
price-feed/: Cargo.toml
price-feed/src/: lib.rs
scripts/: deploy.ts
storage/: CHANGELOG.md  Cargo.toml  sqlx-data.json
storage/.sqlx/: query-00acc2eea7e4f068d1bd8a3475914410862f6a32be3185ef3ba8946c441f12dc.json  query-0296c80dfb2f21e40580333a071f07e0c0b25eb548cc83f9386c810847a3aa65.json  query-039179a81731cbeedc5e460d9396bee3f0e407c151080703b84bb7027fd40dda.json  query-048503f2aedac66dceb8c0b08dafbcbd2452d18fe5d4193e7e18a836718011e1.json  query-053dd4ef7f4d233d5806dbf5c7b16c0ae2dbb4c99f0af67c058d32d70ea90a48.json  query-05911144958f3bf14cfd7310746bfc9af91933dbe3a55c092116207734d756ad.json  query-05c4906bd809f5d6f90e41b9130004c9aa432464493a331f37fcb171bdedb271.json  query-072439a43884e939dd0c2d30f21d4b56d69491cdb8ef8cbe7a7499867fdf1e40.json  query-0b1c540f0165a5c0d71920c69c8447e28e238c105771af1e1acc5eb26ee7a4f9.json  query-0d55e283cc9e04796b69a37e7afc1cecab2af7a29892518a9726b05de1c5d0c5.json  query-0fa6ebcd275b249c6bbc46a40824b366527f5c69f958ae499ce198838d7e899a.json  query-13378279015b74fc91881cf464df1a3de9430d32f27fe5c37dec8c8aff82b7ef.json  query-1393c97850021707104094f43ff5a31b5568fc2a7386bc654c42b4a6bf77d96a.json  query-1429bfeafe86ef0ce1449e07709bcce578fe6c917592a00654294c881dcc609a.json  query-1439a51cb9304493287a9c54c13e59ab42e1511a38989dfc83f0a240d85a511a.json  query-1469b4a47659cb0067325894dab7250264c6a7831901b5275b6d1af58ba418c2.json  query-184b2e441dabc6d8b665460c4c621e8a907646dcd7afc99180a6b16c7d9e38c0.json  query-18b78d0faba116d70fbece5e5b4797426b13b6d2f8f91f402fcb360850ad4a39.json  query-1a8c44a4e6b5a7d96a3ac5f2183bf389d31e098eb5851e939a34597421f82b24.json  query-1b7a578415a2d822b9c0fe100c841cbe290a5874428de69986850bb422c23648.json  query-1e6eea5e34e9fba17f3f84ef19fff13151ed72a8694005d4959ab8c9bd79103a.json  query-21856b9a69548bae0480da6a674acd0ebfc8082f37745e37f32abf3bb3648773.json  query-21ed1c0b070f4929f990e1810e682b4099dad6c4b65d951e3534e2168e7ad79e.json  query-2ae6b4d151780f776b80346b82e7900c3fd333f640aa0b98973232148d8f0e31.json  query-2d4fbb21f9b73c5a557e688ea157c578e2bcfaee3a4b5f22bc1965acd67e488c.json  query-2eecc3c39cd4589afb7df6783d942fa381da031df1440bfbcee9ce7445732968.json  query-2f70733e79fa905d2501bb4c4cb85c290e6ee15775b55dae3675de38cad5f8f9.json  query-30d83e4600a18969f462bb932d5723539f91234eb00f634f0a96772b79c28808.json  query-3167093f1230ee517cfb4940dad1cc0550beb13f7e9482234719cecb65a0789d.json  query-31a52d0c1f65b23eb0119d7fca05afe92085a39263dd9de893efe3dd33230406.json  query-339a4ee17b31898b67b96b9d47ac7d28225b64d47bd4cde0051793428509f37b.json  query-3649069730a878f623ed80851579b8079847a1574508431ec218ea4db17a414e.json  query-3853bc0dc0f52b3bfbaf0b5427ea5ce59fba764d0f1f1749c078654353f3e112.json  query-3b26a07ba90200fcfa45b0107f5a9a1d125792b6d9ded054112f170e69c93c88.json  query-3c8e8dbb5b21bc5726ff4d029ab00f76d602010948c9025964eb62d2f8921a48.json  query-3fd366bc7ca83fdbbbfd8efcf47b8bfd55d37470a34d1cbeb7b7d444ef79ce2b.json  query-41d15680749ea7e2d5f79c5e611f8fef216955ee061ec319806474124d882a71.json  query-4450080a1e6671c353502f47a1f27de9d45cf9c383a6b737b6f1002a59a3fa78.json  query-49142605f289da24b95a3aa89f52dbb656cdc19cbfcada37feab5d6f3f036707.json  query-49914a0609d030439df1d5cb1e764f8fa6c2fdf603c2f52eaf6a43037a491927.json  (+89 more)
storage/migrations/: 20230521160738_init.down.sql  20230521160738_init.up.sql  20230626065055_l2tol1events.down.sql  20230626065055_l2tol1events.up.sql  20230629142441_tokens.up.sql  20230717075048_finalizer.down.sql  20230717075048_finalizer.up.sql  20230731042444_fd-l2-block-index.down.sql  20230731042444_fd-l2-block-index.up.sql  20230804105608_finalization-tx-is-null-idx.down.sql  20230804105608_finalization-tx-is-null-idx.up.sql  20230804123356_commit-l1-block-idx.down.sql  20230804123356_commit-l1-block-idx.up.sql  20231013101851_finalize_attempts_timestamps.down.sql  20231013101851_finalize_attempts_timestamps.up.sql  20231013113659_mark_withdrawal_as_unfinalizable.down.sql  20231013113659_mark_withdrawal_as_unfinalizable.up.sql  20240117151759_token_price_field.down.sql  20240117151759_token_price_field.up.sql  20240221084958_add-api-indices.down.sql  20240221084958_add-api-indices.up.sql  20240325203324_add-l1-receiver-address.down.sql  20240325203324_add-l1-receiver-address.up.sql
storage/src/: error.rs  lib.rs  macro_utils.rs  metrics.rs  utils.rs
tx-sender/: Cargo.toml
tx-sender/src/: error.rs  lib.rs  metrics.rs
vlog/: Cargo.toml
vlog/src/: lib.rs
watcher/: Cargo.toml
watcher/src/: lib.rs  metrics.rs
withdrawals-meterer/: Cargo.toml
withdrawals-meterer/src/: lib.rs  metrics.rs
