[workspace]
resolver = "1"

members = [
    "bin/withdrawal-finalizer",
    "bin/delete-db-content-migration",
    "bin/delete-finalization-data-migration",
    "ethers-log-decode",
    "finalizer",
    "client",
    "chain-events",
    "storage",
    "tx-sender",
    "vlog",
    "watcher",
    "withdrawals-meterer"
]

[workspace.dependencies]
auto_impl = "1.1.0"
async-trait = "0.1.74"
ethers = { version = "2.0.10", default-features = false }
tokio = "1.33.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12.0"
sentry = { version = "0", default-features = false }
lazy_static = "1.4.0"
itertools = "0.11.0"
serde = "1.0.189"
thiserror = "1.0.49"
serde_json = "1.0"
color-eyre = "0.6.2"
eyre = "0.6.8"
dotenvy = "0.15.7"
metrics = "0.21"
envconfig = "0.10.0"
metrics-exporter-prometheus = "0.12"
proc-macro2 = "1.0.69"
bincode = "1.3.3"
futures = "0.3.28"
quote = "1.0.33"
num = "0.4.1"
syn = "2.0.38"
hex = "0.4"
pretty_assertions = "1"
sqlx = "0.7"
chrono = { version = "0.4.31", default-features = false }
vise = { git = "https://github.com/matter-labs/vise.git" }
client = { path = "./client" }
chain-events = { path = "./chain-events" }
storage = { path = "./storage" }
withdrawals-meterer = { path = "./withdrawals-meterer" }
watcher = { path = "./watcher" }
ethers-log-decode = { path = "./ethers-log-decode" }
tx-sender = { path = "./tx-sender" }
finalizer = { path = "./finalizer" }
tokio-stream = "0.1.14"
tokio-util = "0.7.9"
url = "2.4.1"
vlog = { path = "./vlog" }
