[workspace]
resolver = "1"

members = [
    "bin/withdrawal-finalizer",
    "bin/delete-db-content-migration",
    "bin/delete-finalization-data-migration",
    "bin/prepare-calldata-for-withdrawal",
    "ethers-log-decode",
    "finalizer",
    "client",
    "chain-events",
    "storage",
    "tx-sender",
    "vlog",
    "watcher",
    "withdrawals-meterer",
    "api"
]

[workspace.package]
version = "0.2.0"
edition = "2021"
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
exclude = ["./github"]

[workspace.dependencies]
auto_impl = "1.1.2"
async-trait = "0.1.77"
ethers = { version = "2.0.13", default-features = false }
tokio = "1.36.0"
clap = "4.5.1"
tracing = "0.1"
tracing-subscriber = "0.3"
sentry = { version = "0", default-features = false }
lazy_static = "1.4.0"
itertools = "0.12.1"
serde = "1.0.197"
thiserror = "1.0.57"
serde_json = "1.0"
color-eyre = "0.6.2"
eyre = "0.6.12"
dotenvy = "0.15.7"
envconfig = "0.10.0"
proc-macro2 = "1.0.78"
bincode = "1.3.3"
futures = "0.3.30"
quote = "1.0.35"
num = "0.4.1"
syn = "2.0.48"
hex = "0.4"
pretty_assertions = "1"
sqlx = "0.7"
chrono = { version = "0.4.34", default-features = false }
vise = { git = "https://github.com/matter-labs/vise.git" }
vise-exporter = { git = "https://github.com/matter-labs/vise.git" }
client = { path = "./client" }
api = { path = "./api" }
chain-events = { path = "./chain-events" }
storage = { path = "./storage" }
withdrawals-meterer = { path = "./withdrawals-meterer" }
watcher = { path = "./watcher" }
ethers-log-decode = { path = "./ethers-log-decode" }
tx-sender = { path = "./tx-sender" }
finalizer = { path = "./finalizer" }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tower-http = "0.5.1"
url = "2.5.0"
axum = "0.7.4"
vlog = { path = "./vlog" }
