[workspace]
resolver = "1"

members = [
    "bin/withdrawal-finalizer",
    "bin/delete-db-content-migration",
    "bin/delete-finalization-data-migration",
    "bin/prepare-calldata-for-withdrawal",
    "ethers-log-decode",
    "finalizer",
    "client",
    "chain-events",
    "storage",
    "tx-sender",
    "vlog",
    "watcher",
    "withdrawals-meterer",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
exclude = ["./github"]

[workspace.dependencies]
auto_impl = "1.2.0"
async-trait = "0.1.80"
ethers = { version = "2.0.14", default-features = false }
tokio = "1.37.0"
clap = "4.5.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sentry = { version = "0.32.3", default-features = false }
lazy_static = "1.4.0"
itertools = "0.12.1"
serde = "1.0.200"
thiserror = "1.0.59"
serde_json = "1.0.116"
color-eyre = "0.6.3"
eyre = "0.6.12"
dotenvy = "0.15.7"
envconfig = "0.10.0"
proc-macro2 = "1.0.81"
bincode = "1.3.3"
futures = "0.3.30"
quote = "1.0.36"
num = "0.4.2"
syn = "2.0.60"
hex = "0.4.3"
pretty_assertions = "1.4.0"
sqlx = "0.7.4"
chrono = { version = "0.4.38", default-features = false }
vise = { git = "https://github.com/matter-labs/vise.git" }
vise-exporter = { git = "https://github.com/matter-labs/vise.git" }
client = { path = "./client" }
chain-events = { path = "./chain-events" }
storage = { path = "./storage" }
withdrawals-meterer = { path = "./withdrawals-meterer" }
watcher = { path = "./watcher" }
ethers-log-decode = { path = "./ethers-log-decode" }
tx-sender = { path = "./tx-sender" }
finalizer = { path = "./finalizer" }
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
url = "2.5.0"
vlog = { path = "./vlog" }
