[package]
name = "api"
version.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
storage.workspace = true
sqlx.workspace = true
serde.workspace = true
tokio.workspace = true
ethers.workspace = true
