[package]
name = "chain-events"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client" }
ethers = { version = "2.0.10", features = ["ws"] }
futures = "0.3.28"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["time"] }
vise = { workspace = true }


vlog = { path = "../vlog" }
ethers-log-decode = { path = "../ethers-log-decode" }
