[package]
name = "chain-events"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = { workspace = true,  features = ["ws"] }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }

vise = { workspace = true }
tracing = { workspace = true }
client = { workspace = true }
ethers-log-decode = { workspace = true }
