[package]
name = "chain-events"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true,  features = ["ws"] }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }

vise = { workspace = true }
tracing = { workspace = true }
client = { workspace = true }
ethers-log-decode = { workspace = true }
