[package]
name = "client"
version = "0.1.59"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
auto_impl = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true } 
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
vise = { workspace = true }
lru = { workspace = true }
ethers-log-decode = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
pretty_assertions = { workspace = true }
