[package]
name = "client"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
auto_impl = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true } 
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
vise = { workspace = true }
lru = { workspace = true }
ethers-log-decode = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
pretty_assertions = { workspace = true }
