[package]
name = "ethers-log-decode"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ethers = "2.0.8"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"
