[package]
name = "ethers-log-decode"
version = "0.1.59"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
ethers = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true } 
syn = { workspace = true } 
