[package]
name = "ethers-log-decode"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
ethers = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true } 
syn = { workspace = true } 
