[package]
name = "finalizer"
version = "0.1.59"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
vise = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

client = { workspace = true }
storage = { workspace = true }
tx-sender = { workspace = true }
withdrawals-meterer = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
