[package]
name = "finalizer"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
vise = { workspace = true }
serde_json = { workspace = true }

client = { workspace = true }
storage = { workspace = true }
tx-sender = { workspace = true }
withdrawals-meterer = { workspace = true }
