[package]
name = "price-feed"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true

[dependencies]
tokio = { workspace = true, features = ["time"] }
ethers = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
