[package]
name = "storage"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio-rustls",
    "macros"
] }
num = "0.4.1"

vise = { workspace = true }

client = { path = "../client" }
chain-events = { path = "../chain-events" }
ethers = "2.0.10"
thiserror = "1.0.49"
bincode = "1.3.3"

