[package]
name = "storage"
version = "0.1.59"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true, features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio-rustls",
    "macros"
] }
num = { workspace = true }
vise = { workspace = true }
client = { workspace = true }
chain-events = { workspace = true }
ethers = { workspace = true } 
thiserror = { workspace = true }
bincode = { workspace = true }
