[package]
name = "storage"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true, features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio-rustls",
    "macros"
] }
num = { workspace = true }
vise = { workspace = true }
client = { workspace = true }
chain-events = { workspace = true }
ethers = { workspace = true } 
thiserror = { workspace = true }
bincode = { workspace = true }
