[package]
name = "tx-sender"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = "2.0.10"
tokio = { version = "1.33.0", features = ["time"] }
tracing = { workspace = true }
vise = { workspace = true }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
pretty_assertions = "1"
