[package]
name = "tx-sender"
version = "0.1.59"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
vise = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
