[package]
name = "tx-sender"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
vise = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
