[package]
name = "vlog"
version = "1.0.0"
edition = "2018"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-withdrawal-finalizer"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false # This is an utility crate, not to be used by libraries.

[dependencies]
chrono = { workspace = true, features = ["serde", "clock"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "time", "json"] }
sentry = { workspace = true, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "anyhow"] }
serde_json = { workspace = true }
