[package]
name = "vlog"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde", "clock"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "time", "json"] }
sentry = { workspace = true, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "anyhow"] }
serde_json = { workspace = true }
