[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.8"
itertools = "0.11.0"
futures = "0.3.28"
metrics = "0.21.1"
thiserror = "1.0.44"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.30.0", features = ["time"] }

client = { path = "../client" }
chain-events = { path = "../chain-events" }
storage = { path = "../storage" }
vlog = { path = "../vlog" }
