[package]
name = "watcher"
version = "0.1.60"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
vise = { workspace = true }
ethers = { workspace = true }

client = { workspace = true }
chain-events = {  workspace = true }
storage = { workspace = true }
withdrawals-meterer = { workspace = true }
