[package]
name = "watcher"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
itertools = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, features = ["macros", "time"] }
tracing = { workspace = true }
vise = { workspace = true }
ethers = { workspace = true }

client = { workspace = true }
chain-events = {  workspace = true }
storage = { workspace = true }
withdrawals-meterer = { workspace = true }
price-feed = { workspace = true }
