[package]
name = "withdrawals-meterer"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = "2.0.10"
metrics = "0.21.1"
tracing = { workspace = true }

client = { path = "../client" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
storage = { path = "../storage" }
