[package]
name = "withdrawals-meterer"
version = "0.1.11"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
tracing = { workspace = true }
vise = { workspace = true }
client = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
storage = { workspace = true }
