[package]
name = "withdrawals-meterer"
version.workspace = true
homepage.workspace = true
license.workspace = true 
edition.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
tracing = { workspace = true }
vise = { workspace = true }
client = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
storage = { workspace = true }
